k8s/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-hardened
  namespace: default
  labels:
    app: k8s-hardened
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-hardened
  template:
    metadata:
      labels:
        app: k8s-hardened
    spec:
      containers:
      - name: hello
        image: moabukar/k8s-hardened:pod-as-root
        ports:
          - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: k8s-hardened
  namespace: default
spec:
  selector:
    app: k8s-hardened
  ports:
    - port: 80
      targetPort: 8080
